Simple Voice Radio 0.0.7 (global rework)